# pytradowix

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke_test.py
examples/: fetch_balance.py  fetch_history.py  place_trade.py
pytradowix/: __init__.py  _base.py  client.py  config.py  exceptions.py  py.typed  types.py
pytradowix/_api/: account.py  history.py  realtime.py  trading.py
pytradowix/utils/: candles.py  waits.py
tests/: test_types.py  test_waits.py
